feat: part 2 of the task + some log4j2 refinements